Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4(EOL), 10.5(EOL), 10.6
-
None
Description
***Warnings generated in error logs during shutdown after running tests: galera_sr.GCF-1018B
==428805==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x6020000148d8 at pc 0x000001be821d bp 0x7fbe0bb2b030 sp 0x7fbe0bb2b028
SUMMARY: AddressSanitizer: heap-buffer-overflow /mariadb/10.6/sql/wsrep_schema.cc:1115:43 in Wsrep_schema::remove_fragments(THD*, wsrep::id const&, wsrep::transaction_id, std::vector<wsrep::seqno, std::allocator<wsrep::seqno> > const&)
Attempting backtrace. You can use the following information to find out